force-app/main/default/objects/SurveyQuestionResponse__c/fields/AM_Owner_Identifier__c.field-meta.xml
<CustomField>
    <fullName>AM_Owner_Identifier__c</fullName>
    <formula>SurveyTaker__r.Case__r.Service_Agreement__r.Performance_Manager__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Owner Identifier</label>
    <type>Checkbox</type>
</CustomField>