force-app/main/default/objects/SurveyQuestionResponse__c/fields/Escalate_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to Manager</label>
    <type>Checkbox</type>
</CustomField>