force-app/main/default/objects/SurveyQuestionResponse__c/fields/NPS_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>NPS_Additional_Comments__c</fullName>
    <label>NPS Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>