force-app/main/default/objects/SurveyQuestionResponse__c/fields/Related_Question_Response_Value__c.field-meta.xml
<CustomField>
    <fullName>Related_Question_Response_Value__c</fullName>
    <label>Related Question Response Value</label>
    <type>TextArea</type>
</CustomField>