force-app/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Rating__c.field-meta.xml
<CustomField>
    <fullName>Survey_Rating__c</fullName>
    <label>Survey Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>