force-app/main/default/objects/SurveyQuestionResponse__c/fields/Survey_Value__c.field-meta.xml
<CustomField>
    <fullName>Survey_Value__c</fullName>
    <label>Survey Value</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>