force-app/main/default/objects/SurveyQuestionResponse__c/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use for Testing purposes only</inlineHelpText>
    <label>TEST</label>
    <type>Checkbox</type>
</CustomField>