force-app/main/default/objects/SurveyQuestionResponse__c/fields/Value_Survey__c.field-meta.xml
<CustomField>
    <fullName>Value_Survey__c</fullName>
    <formula>Value(Survey_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value(Survey)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>